--- a/LoginForm Module (Swing)/sqliteJDBCconnection/src/sqlitejdbcconnection/RegisterForm.form
+++ b/LoginForm Module (Swing)/sqliteJDBCconnection/src/sqlitejdbcconnection/RegisterForm.form
@@ -77,7 +77,7 @@
                                       <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
-                                          <Component id="gendercbox" min="-2" pref="171" max="-2" attributes="0"/>
+                                          <Component id="gendercbox" min="-2" pref="175" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -130,7 +130,7 @@
                           <Component id="jLabel9" alignment="0" min="-2" pref="105" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
