--- a/Nasospeech in FX/NasoFX/src/nasofx/FXMLDocument.fxml
+++ b/Nasospeech in FX/NasoFX/src/nasofx/FXMLDocument.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="628.0" prefWidth="1200.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nasofx.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="628.0" prefWidth="1200.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nasofx.FXMLDocumentController">
    <children>
       <AnchorPane layoutX="1.0" layoutY="1.0">
          <children>
@@ -25,11 +29,12 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <MenuBar layoutX="9.0" layoutY="1.0" style="-fx-background-color: #717171;" styleClass="menuFont" stylesheets="@NasoCSS.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <MenuBar layoutX="9.0" layoutY="1.0" style="-fx-background-color: #717171;" stylesheets="@NasoCSS.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" text="Open" />
+                  <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -46,17 +51,34 @@
       </MenuBar>
       <TabPane fx:id="TP" layoutX="4.0" layoutY="94.0" prefHeight="375.0" prefWidth="1192.0" style="-fx-background-color: #c2c2c2;" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0">
         <tabs>
-          <Tab fx:id="tab1" text="Waveform" />
-          <Tab text="Hypernasality" />
+          <Tab fx:id="tab1" text="Waveform    ">
+               <content>
+                  <AnchorPane>
+                     <children>
+                        <ScrollBar layoutX="1.0" layoutY="325.0" prefHeight="17.0" prefWidth="1192.0" />
+                     </children>
+                  </AnchorPane>
+               </content></Tab>
+          <Tab text="Hypernasality    " />
         </tabs>
       </TabPane>
       <Slider fx:id="slider" layoutX="1046.0" layoutY="99.0" />
-      <ToolBar layoutX="500.0" layoutY="517.0" prefHeight="41.0" prefWidth="184.0">
+      <Label layoutX="1000.0" layoutY="99.0" text="Zoom" />
+      <ToolBar layoutX="484.0" layoutY="525.0" prefHeight="41.0" prefWidth="232.0" style="-fx-background-color: #7f7f7f;">
         <items>
-          <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" />
-            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" />
-            <Button layoutX="54.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" />
-            <Button layoutX="98.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" />
+          <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="40.0" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="40.0" />
+            <Button layoutX="54.0" layoutY="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="40.0" />
+            <Button blendMode="SCREEN" layoutX="98.0" layoutY="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="40.0" style="-fx-background-color: #7f7f7f;">
+               <graphic>
+                  <ImageView fitHeight="19.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/new%20play%20icon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button layoutX="142.0" layoutY="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="40.0" />
         </items>
       </ToolBar>
    </children>
