--- a/Nasospeech in FX/NasoFX/src/nasofx/NasoCSS.css
+++ b/Nasospeech in FX/NasoFX/src/nasofx/NasoCSS.css
@@ -8,10 +8,32 @@ and open the template in the editor.
     Author     : IITG
 */
 
-
-.menuFont{
-   
-     -fx-font-size: 130%;
-     -fx-text-fill: white;
+.menu-item .label {
+    -fx-text-fill: white;
     
+}
+
+.menu-item:focused {
+     -fx-background-color: #0096c9;
+}
+
+.menu-item:focused .label {
+    -fx-text-fill: white;
+}
+
+
+.menu-bar .label {
+    -fx-font-size: 15 pt;
+    -fx-font-family: "Segoe UI Light";
+   -fx-text-fill: #dedede;
+
+}
+
+.context-menu {
+    -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
+    -fx-background-color: #717171;
+  //  -fx-background-insets: 0, 1, 2;
+  //  -fx-background-radius: 0 6 6 6, 0 5 5 5, 0 4 4 4;
+/*    -fx-padding: 0.666667em 0.083333em 0.666667em 0.083333em;  8 1 8 1 */
+    //-fx-padding: 0.333333em 0.083333em 0.666667em 0.083333em; /* 4 1 8 1 */
 }
