--- a/RnDops/css/helper.css
+++ b/RnDops/css/helper.css
@@ -17,6 +17,12 @@
 .mt10{
     margin-top: 10px!important;
 }
+.mt12{
+    margin-top: 12px!important;
+}
+.mt17{
+    margin-top: 17px!important;
+}
 .mt20{
     margin-top: 20px!important;
 }
@@ -61,6 +67,9 @@
 .p0{
     padding: 0px!important;
 }
+.p8{
+    padding: 8px!important;
+}
 .ptb2{
     padding: 2px 0!important;
 }
@@ -99,6 +108,9 @@
 }
 .pl15{
     padding-left: 15px!important;
+}
+.pl8{
+    padding-left: 8px!important;
 }
 /*BORDERS*/
 .br{
@@ -163,7 +175,7 @@
     right: 22px;}
 /*Breadcrumb Header*/
 .mainbody .wrapper {
-  width:70%;
+ width: 70.5%;
     margin: 2.3% auto 15px;
 }
 
@@ -236,4 +248,25 @@
 /*POINTER*/
 .cp{
     cursor: pointer!important;
+}
+/*width*/
+.w100{
+    width: 100%!important;
+}
+.w20{
+    width: 20%!important;
+}
+.w10{
+    width: 10%!important;
+}
+/*height*/
+.h40{
+    height: 40px!important;
+}
+/*lineheight*/
+.lineheight6{
+    line-height: 6px!important;
+}
+.lineheight12{
+    line-height: 12px!important;
 }
