--- a/Nasospeech in FX/NasoFX/src/nasofx/FXMLDocument.fxml
+++ b/Nasospeech in FX/NasoFX/src/nasofx/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -73,12 +74,18 @@
                   <AnchorPane fx:id="tab1ap">
                      <children>
                         <ScrollBar layoutX="1.0" layoutY="325.0" prefHeight="17.0" prefWidth="1192.0" AnchorPane.rightAnchor="0.0" />
-                        <ImageView fx:id="marker" fitHeight="325.0" fitWidth="78.0" layoutX="566.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="marker" fitHeight="325.0" fitWidth="78.0" layoutX="566.0" onMouseDragged="#markerdrag" onMousePressed="#markerpress" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../Icons/marker.png" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="H_RESIZE" />
+                           </cursor>
                         </ImageView>
                      </children>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
                   </AnchorPane>
                </content></Tab>
         </tabs>
