RnDOPs header rectified

--- a/RnDops/css/helper.css
+++ b/RnDops/css/helper.css
@@ -176,7 +176,7 @@
 /*Breadcrumb Header*/
 .mainbody .wrapper {
  width: 70.5%;
-    margin: 2.3% auto 15px;
+    margin: 0 auto 15px;
 }
 
 .mainbody .wrapper ul {
