Rndops updated utilities

--- a/RnDops/css/helper.css
+++ b/RnDops/css/helper.css
@@ -145,6 +145,9 @@
 .white{
     color: #fff!important;
 }
+.blue{
+    color:#03A9F4!important;
+}
 .transparent{
     background-color: transparent!important;
 }
