--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bottom_bg">
+    android:fitsSystemWindows="true"
+    tools:context="com.example.dod.nasospeech_android.MainActivity">
 
-    
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#90A4AE"
+        android:titleTextColor="#000">
+
+
+    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
@@ -21,42 +32,51 @@
               android:layout_height="160dp"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/ns_logo"/>
-           <EditText
-               android:layout_width="480dp"
-               android:layout_height="wrap_content"
-               android:inputType="textWebEmailAddress"
-               android:ems="10"
-               android:background="@android:color/transparent"
-               android:layout_gravity="center_horizontal"
-               android:drawablePadding="10dp"
-               android:layout_marginTop="40dp"
-               android:padding="10dp"
-               android:hint="Username"
-               android:textSize="20sp"
-               android:textColorHint="#7c7c7c"
-               android:maxLines="1"
-               android:drawableLeft="@drawable/ic_person_outline_black_24dp"/>
+          <android.support.design.widget.TextInputLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+              <EditText
+                  android:layout_width="480dp"
+                  android:layout_height="wrap_content"
+                  android:inputType="textWebEmailAddress"
+                  android:ems="10"
+                  android:background="@android:color/transparent"
+                  android:layout_gravity="center_horizontal"
+                  android:drawablePadding="10dp"
+                  android:layout_marginTop="40dp"
+                  android:padding="10dp"
+                  android:hint="Username"
+                  android:textSize="20sp"
+                  android:textColorHint="#7c7c7c"
+                  android:maxLines="1"/>
+          </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="480dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="#7c7c7c">
                </View>
-           <EditText
-               android:layout_width="480dp"
+           <android.support.design.widget.TextInputLayout
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:inputType="phone"
-               android:ems="10"
-               android:textSize="20sp"
+               android:id="@+id/password"
                android:layout_marginTop="40dp"
-               android:background="@android:color/transparent"
-               android:layout_gravity="center_horizontal"
-               android:drawablePadding="10dp"
-               android:padding="10dp"
-               android:hint="Password"
-               android:textColorHint="#7c7c7c"
-               android:maxLines="1"
-               android:drawableLeft="@drawable/ic_lock_open_black_24dp"/>
+               app:passwordToggleEnabled="true">
+               <EditText
+                   android:layout_width="480dp"
+                   android:layout_height="wrap_content"
+                   android:inputType="textPassword"
+                   android:ems="10"
+                   android:textSize="20sp"
+
+                   android:background="@android:color/transparent"
+                   android:layout_gravity="center_horizontal"
+                   android:drawablePadding="10dp"
+                   android:padding="10dp"
+                   android:hint="@string/password"
+                   android:textColorHint="#7c7c7c"
+                   android:maxLines="1"/>
+           </android.support.design.widget.TextInputLayout>
 
 
            <View
@@ -73,7 +93,8 @@
                android:text="Remember me"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal"
-               android:textColor="#527787"
+               android:textColor="#6d6d6d"
+
                android:textSize="20sp"
                android:padding="8dp"
 
@@ -87,24 +108,52 @@
                
             <Button
                 android:layout_width="0dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="62dp"
                 android:layout_height="68dp"
-                android:textColor="#2281a9"
+                android:textColor="#fff"
                 android:id="@+id/buttonlogin"
-                android:background="@drawable/button1"
+                android:background="@drawable/button2"
 
                 android:layout_weight="1"
-                android:text="Login"/>
-               <Button
+                android:textSize="20sp"
+                android:text="Log in"/>
+               <!--<Button
                    android:layout_marginTop="50dp"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="68dp"
                    android:background="@drawable/button2"
                    android:layout_weight="1"
-                   android:text="Sign up"/>
-               
+                   android:id="@+id/buttonsignup"
+                   android:text="Sign up"/>-->
+
            </LinearLayout>
+
+           <TextView
+               android:id="@+id/txtLostpassword"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center"
+               android:autoLink="email"
+               android:gravity="center"
+               android:paddingTop="30dp"
+               android:text="@string/lostpassword"
+               android:textStyle="bold"
+               android:textAppearance="?android:attr/textAppearanceSmall" />
+
+           <TextView
+               android:id="@+id/txtLostpassword"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center"
+               android:autoLink="all"
+               android:paddingTop="90dp"
+               android:gravity="center"
+               android:textColor="#3b3b3b"
+               android:text="@string/defaultpassword"
+               android:textAppearance="?android:attr/textAppearanceSmall" />
+
+
            
        </LinearLayout>
 
