--- a/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/button2.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/button2.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#3aaddd"/>
+<solid android:color="#771eca"/>
     <stroke android:width="1dp"
-        android:color="#3aaddd"
+        android:color="#771eca"
         />
-    <corners android:topRightRadius="10dp"
-        android:bottomRightRadius="10dp"
+    <corners android:radius="10dp"
+
 
 
         />
