--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.dod.nasospeech_android.MainActivity">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,9 +12,9 @@
         android:layout_height="wrap_content"
         android:background="#90A4AE"
         android:titleTextColor="#000">
-
-
     </android.support.v7.widget.Toolbar>
+
+
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
