--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/colors.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1f1f1f</color>
-     <color name="colorPrimaryDark">#000</color>
+    <color name="colorPrimary">#000</color>
+     <color name="colorPrimaryDark">#3d3d3d</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="textColorPrimary">#616161</color>
 </resources>
