--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/colors.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000</color>
-     <color name="colorPrimaryDark">#3d3d3d</color>
+    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimaryDark">#3949AB</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="textColorPrimary">#616161</color>
 </resources>
