--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_doctor_dashboard.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_doctor_dashboard.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_doctor_dashboard"
+        app:theme="@style/NavigationViewStyle"
         app:menu="@menu/activity_doctor_dashboard_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
