--- a/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/circle.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/circle.xml
@@ -4,14 +4,15 @@
         <shape android:shape="oval">
             <stroke
                 android:width="1dp"
-                android:color="#283593"/>
+                android:color="#fff"/>
         </shape>
 
     </item>
     <item
-        android:drawable="@drawable/doctor"
-        android:bottom="20dp"
-        android:left="20dp"
-        android:right="20dp"
-        android:top="20dp"/>
+        android:drawable="@drawable/ic_person_outline_black_24dp"
+        android:bottom="30dp"
+        android:left="30dp"
+        android:right="30dp"
+        android:top="30dp"/>
+
 </layer-list>
