--- a/ANDROID/NasoSpeech_Android/app/src/main/res/menu/activity_doctor_dashboard_drawer.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/menu/activity_doctor_dashboard_drawer.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+           android:id="@+id/nav_camera_group">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:icon="@drawable/ic_people_outline_black_24dp"
+            android:title="Patients" />
+        </group>
+    <group android:checkableBehavior="single"
+        android:id="@+id/nav_gallery_group">
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:icon="@drawable/ic_event_available_black_24dp"
+            android:title="Appointments" />
+        </group>
+    <group android:checkableBehavior="single"
+           android:id="@+id/nav_slideshow_group">
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Profile details" />
+        </group>
+    <group android:checkableBehavior="single"
+           android:id="@+id/nav_manage_group">
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:icon="@drawable/ic_headset_mic_black_24dp"
+            android:title="Support" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+    <item android:id="@+id/nav_logout"
+        android:title="LOG OUT"
+        />
 
 </menu>
