--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/styles.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/styles.xml
@@ -17,5 +17,12 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="NavigationViewStyle">
+        <item name="android:textSize">16sp</item> <!-- menu item text size-->
+
+
+
+        <item name="android:listPreferredItemHeightSmall">60dp</item><!-- menu item height-->
+    </style>
 
 </resources>
