--- a/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/listborder.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/listborder.xml
@@ -4,8 +4,8 @@
         <shape
             android:shape="rectangle">
             <!-- Set the border color of your layout here -->
-            <stroke android:width="1dp" android:color="#7c7c7c" />
-            <solid android:color="#7c7c7c" />
+            <stroke android:width="1dp" android:color="#BDBDBD" />
+            <solid android:color="#BDBDBD" />
 
         </shape>
     </item>
