--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_hypernasality.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_hypernasality.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dod.applicationnaso.Hypernasality">
+    tools:context="com.example.dod.applicationnaso.Hypernasality"
+    tools:showIn="">
 
 
     <android.support.v7.widget.RecyclerView
@@ -13,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
+
+
 
 
 
