--- a/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/circlesidebar.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/drawable/circlesidebar.xml
@@ -4,12 +4,12 @@
         <shape android:shape="oval">
             <stroke
                 android:width="1dp"
-                android:color="#7c7c7c"/>
+                android:color="#fff"/>
         </shape>
 
     </item>
     <item
-        android:drawable="@drawable/ic_perm_identity_black_24dp"
+        android:drawable="@drawable/ic_person_outline_black_24dp"
         android:bottom="30dp"
         android:left="30dp"
         android:right="30dp"
