--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_add_patient.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_add_patient.xml
@@ -1,77 +1,176 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#fff"
     tools:context="com.example.dod.applicationnaso.AddPatient">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
 
-    <ScrollView
-        android:id="@+id/login_form"
+<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/email_login_form"
+<LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_gravity="center"
+        android:src="@drawable/cirle"
+        android:onClick="selectImage"/>
 
-                <AutoCompleteTextView
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
 
-            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+     android:layout_gravity="center_horizontal"
+        android:layout_marginTop="-68dp"
+        android:layout_marginLeft="55dp"
+        android:src="@drawable/ic_mode_edit_black_24dp" />
 
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
+    <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+        android:layout_marginTop="100dp">
+                <EditText
+                    android:layout_width="480dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:background="@android:color/transparent"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="10dp"
+                   android:padding="10dp"
+                    android:hint="Name"
+                    android:textSize="22sp"
+                    android:textColorHint="#7c7c7c"
+                    android:maxLines="1"/>
+            </android.support.design.widget.TextInputLayout>
+            <View
+                android:layout_width="480dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#7c7c7c">
+            </View>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvdate"
+                android:layout_marginTop="40dp">
+                <EditText
+                    android:layout_width="480dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="date"
+                    android:ems="10"
+                    android:textSize="22sp"
+
+                    android:background="@android:color/transparent"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="10dp"
+                    android:padding="10dp"
+                    android:hint="D.O.B"
+                    android:textColorHint="#7c7c7c"
+                    android:maxLines="1"/>
+            </android.support.design.widget.TextInputLayout>
+
+
+            <View
+                android:layout_width="480dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#7c7c7c">
+            </View>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/contact"
+                android:layout_marginTop="40dp">
+                <EditText
+                    android:layout_width="480dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone"
+                    android:ems="10"
+                    android:textSize="22sp"
+
+                    android:background="@android:color/transparent"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="10dp"
+                    android:padding="10dp"
+                    android:hint="Contact No."
+                    android:textColorHint="#7c7c7c"
+                    android:maxLines="1"/>
+            </android.support.design.widget.TextInputLayout>
+
+
+            <View
+                android:layout_width="480dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#7c7c7c">
+            </View>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/address"
+                android:layout_marginTop="40dp">
+                <EditText
+                    android:layout_width="480dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPostalAddress"
+                    android:ems="10"
+                    android:textSize="22sp"
+
+                    android:background="@android:color/transparent"
+                    android:layout_gravity="center_horizontal"
+                    android:drawablePadding="10dp"
+                    android:padding="10dp"
+                    android:hint="Address"
+                    android:textColorHint="#7c7c7c"
+                    android:maxLines="1"/>
+            </android.support.design.widget.TextInputLayout>
+
+
+            <View
+                android:layout_width="480dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#7c7c7c">
+            </View>
+
+
+
+            <LinearLayout
+                android:layout_width="480dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/buttonone"
+                    android:layout_width="0dp"
+                    android:layout_marginTop="90dp"
+                    android:layout_height="68dp"
+                    android:textColor="#283593"
+                    android:background="@drawable/loginbutton"
+                    android:layout_weight="1"
+                    android:textSize="20sp"
+                    android:text="SUBMIT"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
