--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/content_doctor_dashboard.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/content_doctor_dashboard.xml
@@ -19,11 +19,11 @@
         android:orientation="vertical">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:src="@drawable/username" />
+        android:layout_marginTop="60dp"
+        android:src="@drawable/circle" />
 
     <TextView
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
-            android:layout_marginTop="70dp">
+            android:layout_marginTop="100dp">
 
             <Button
                 android:id="@+id/hypernasality"
