--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/nav_header_doctor_dashboard.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/nav_header_doctor_dashboard.xml
@@ -17,7 +17,7 @@
         android:layout_width="92dp"
         android:layout_height="90dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/circle"
+        android:src="@drawable/circlesidebar"
         />
 
     <TextView
